--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -2,16 +2,26 @@ on:
   workflow_dispatch:
   schedule:
     # run every 4 hours
-    - cron: '20 */4 * * *'
+    - cron: "20 */4 * * *"
 name: Excavator
 jobs:
   excavate:
     name: Excavate
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@main
-    - name: Excavate
-      uses: so1ve/ScoopGithubActions@main
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SKIP_UPDATED: '1'
+      - uses: actions/checkout@main
+      - name: Excavate
+        uses: so1ve/ScoopGithubActions@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SKIP_UPDATED: "1"
+      - name: Sync Versions
+        run: |
+          git clone https://github.com/so1ve/destiny_versions.git
+          cp -R ./versions/* ./destiny_versions/bucket
+      - name: Push Versions
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          directory: "./destiny_versions"
+          repository: so1ve/destiny_versions
